--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -119,7 +119,7 @@ p {
 .wrapper {
 	max-width: 900px;
 	margin: 50px auto;
-	padding: 0 20px;
+	padding: 0 25px;
 	text-align: center;
 	margin-top: 100px;
 	position: relative;
@@ -153,7 +153,7 @@ p {
 	bottom: 80px;
 	margin: 0 auto;
 	text-align: center;
-	width: calc(100% - 40px);
+	width: calc(100% - 50px);
 }
 
 button, .button {
@@ -168,6 +168,7 @@ button, .button {
 	border-radius: 6px;
 	color: #9B2450;
 	text-transform: uppercase;
+	background-color: white;
 
 	&:first-of-type {
 		border: 4px solid white;
@@ -291,5 +292,92 @@ CONSIDERATION-SPECIFIC STUFF
 		font-style: initial;
 		vertical-align: middle;
 		font-size: 1.7rem;
+	}
+}
+
+.at-resp-share-element .at-share-btn {
+	margin: 0 4px 5px;
+}
+
+
+/* *************************
+  Molbile Styles
+************************* */
+
+@media screen and (max-width: 667px) {
+	h1, .h1 {
+		font-size: 38px;
+	}
+	.main-section {
+		margin-top: 0px;
+		max-height: inherit;
+		height: auto;
+		min-height: 75vh;
+		display: flex;
+		justify-content: center; /* align horizontal */
+		align-items: center; /* align vertical */
+	}
+	.problem-statement {
+		margin-top: 0;
+	}
+	.buttons {
+		position: relative;
+		width: 100%;
+		bottom: 0;
+	}
+	.wrapper {
+		padding: 0 20px;
+		padding-top: 1vh;
+		margin: 20px auto;
+	}
+	.intro,
+	.solution-intro {
+		font-size: 18px;
+	}
+	.the-evidence {
+		font-size: 20px;
+	}
+	.solution-element {
+		.emoji {
+			display: block;
+			margin-top: 10px;
+		}
+	}
+	.the-follow-up {
+		font-size: 17px;
+
+		.coupon-code strong,
+		span.social-account,
+		.to-thirty {
+			font-size: 18px;
+		}
+	}
+	.solution-card {
+		padding: 50px 20px 20px;
+	}
+
+	button, .button {
+		display: inline-block;
+		font-size: 14px;
+		line-height: 2.2;
+		padding: 5px 25px;
+	}
+}
+
+@media screen and (max-width: 374px) {
+	h1, .h1 {
+		font-size: 32px;
+		border: 1px solid red;
+	}
+
+	.wrapper {
+		padding: 0 20px;
+	}
+
+	button, .button {
+		display: inline-block;
+		font-size: 13px;
+		line-height: 2.2;
+		padding: 4px 15px;
 	}
 }
