--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -198,7 +198,7 @@ p {
 .wrapper {
   max-width: 900px;
   margin: 50px auto;
-  padding: 0 20px;
+  padding: 0 25px;
   text-align: center;
   margin-top: 100px;
   position: relative;
@@ -235,7 +235,7 @@ p {
   bottom: 80px;
   margin: 0 auto;
   text-align: center;
-  width: calc(100% - 40px);
+  width: calc(100% - 50px);
 }
 
 /* line 159, ../sass/screen.scss */
@@ -251,22 +251,23 @@ button, .button {
   border-radius: 6px;
   color: #9B2450;
   text-transform: uppercase;
+  background-color: white;
 }
-/* line 172, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 179, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
 .problem-buttons,
 .consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 185, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 .reset-button {
   display: block;
   margin-top: 20px;
@@ -277,11 +278,11 @@ button:first-of-type, .button:first-of-type {
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 197, ../sass/screen.scss */
+/* line 198, ../sass/screen.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 199, ../sass/screen.scss */
+/* line 200, ../sass/screen.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -290,18 +291,18 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 210, ../sass/screen.scss */
+/* line 211, ../sass/screen.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 214, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
-/* line 219, ../sass/screen.scss */
+/* line 220, ../sass/screen.scss */
 .the-evidence strong {
   font-family: "Hevetica Neue", helvetica, sans-serif;
   font-weight: 700;
@@ -309,7 +310,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 20px;
 }
 
-/* line 227, ../sass/screen.scss */
+/* line 228, ../sass/screen.scss */
 .evidence-card {
   background: white;
   padding: 20px 20px 35px;
@@ -318,11 +319,11 @@ CONSIDERATION-SPECIFIC STUFF
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 235, ../sass/screen.scss */
+/* line 236, ../sass/screen.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 239, ../sass/screen.scss */
+/* line 240, ../sass/screen.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -330,7 +331,7 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 252, ../sass/screen.scss */
+/* line 253, ../sass/screen.scss */
 .solution-statement p.h1:after {
   content: '™';
   vertical-align: top;
@@ -338,7 +339,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-weight: 400;
 }
 
-/* line 261, ../sass/screen.scss */
+/* line 262, ../sass/screen.scss */
 .solution-card {
   border-radius: 8px;
   box-shadow: 4px 6px 24px 10px rgba(60, 64, 67, 0.08), 0 2px 8px 4px rgba(60, 64, 67, 0.08);
@@ -349,18 +350,18 @@ CONSIDERATION-SPECIFIC STUFF
   height: auto;
 }
 
-/* line 271, ../sass/screen.scss */
+/* line 272, ../sass/screen.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: inherit;
   display: block;
   margin-top: 40px;
 }
-/* line 277, ../sass/screen.scss */
+/* line 278, ../sass/screen.scss */
 .the-follow-up a {
   color: white;
 }
-/* line 281, ../sass/screen.scss */
+/* line 282, ../sass/screen.scss */
 .the-follow-up .coupon-code strong,
 .the-follow-up span.social-account,
 .the-follow-up .to-thirty {
@@ -369,9 +370,117 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 18px;
   font-style: initial;
 }
-/* line 290, ../sass/screen.scss */
+/* line 291, ../sass/screen.scss */
 .the-follow-up .emoji {
   font-style: initial;
   vertical-align: middle;
   font-size: 1.7rem;
+}
+
+/* line 298, ../sass/screen.scss */
+.at-resp-share-element .at-share-btn {
+  margin: 0 4px 5px;
+}
+
+/* *************************
+  Molbile Styles
+************************* */
+@media screen and (max-width: 667px) {
+  /* line 308, ../sass/screen.scss */
+  h1, .h1 {
+    font-size: 38px;
+  }
+
+  /* line 311, ../sass/screen.scss */
+  .main-section {
+    margin-top: 0px;
+    max-height: inherit;
+    height: auto;
+    min-height: 75vh;
+    display: flex;
+    justify-content: center;
+    /* align horizontal */
+    align-items: center;
+    /* align vertical */
+  }
+
+  /* line 320, ../sass/screen.scss */
+  .problem-statement {
+    margin-top: 0;
+  }
+
+  /* line 323, ../sass/screen.scss */
+  .buttons {
+    position: relative;
+    width: 100%;
+    bottom: 0;
+  }
+
+  /* line 328, ../sass/screen.scss */
+  .wrapper {
+    padding: 0 20px;
+    padding-top: 1vh;
+    margin: 20px auto;
+  }
+
+  /* line 333, ../sass/screen.scss */
+  .intro,
+  .solution-intro {
+    font-size: 18px;
+  }
+
+  /* line 337, ../sass/screen.scss */
+  .the-evidence {
+    font-size: 20px;
+  }
+
+  /* line 341, ../sass/screen.scss */
+  .solution-element .emoji {
+    display: block;
+    margin-top: 10px;
+  }
+
+  /* line 346, ../sass/screen.scss */
+  .the-follow-up {
+    font-size: 17px;
+  }
+  /* line 349, ../sass/screen.scss */
+  .the-follow-up .coupon-code strong,
+  .the-follow-up span.social-account,
+  .the-follow-up .to-thirty {
+    font-size: 18px;
+  }
+
+  /* line 355, ../sass/screen.scss */
+  .solution-card {
+    padding: 50px 20px 20px;
+  }
+
+  /* line 359, ../sass/screen.scss */
+  button, .button {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 2.2;
+    padding: 5px 25px;
+  }
+}
+@media screen and (max-width: 374px) {
+  /* line 368, ../sass/screen.scss */
+  h1, .h1 {
+    font-size: 32px;
+    border: 1px solid red;
+  }
+
+  /* line 373, ../sass/screen.scss */
+  .wrapper {
+    padding: 0 20px;
+  }
+
+  /* line 377, ../sass/screen.scss */
+  button, .button {
+    display: inline-block;
+    font-size: 13px;
+    line-height: 2.2;
+    padding: 4px 15px;
+  }
 }
