--- a/sass/screen1.scss
+++ b/sass/screen1.scss
@@ -57,6 +57,8 @@ h1, .h1 {
 	line-height: 1.2;
 	font-weight: 700;
 	font-family: "utopia-std", "Times New Roman", serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 strong {
@@ -169,6 +171,8 @@ button, .button {
 	color: #9B2450;
 	text-transform: uppercase;
 	background-color: white;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 
 	&:first-of-type {
 		border: 4px solid white;
